corrigido erro em que falta de ponto e virgula nao era detectado

--- a/Testes/Testes-Fase01/Corretos Sintáticamente/11.in
+++ b/Testes/Testes-Fase01/Corretos Sintáticamente/11.in
@@ -2,7 +2,7 @@ function somaD (c : Int, d : Int) -> Int {
   return c + d;
 }
 
-function somaP (a : Int, B : Int) -> Int {
+function somaP (a : Int, b : Int) -> Int {
   var x : Int;
   x = 1;
 
