apenas passando do note pro pc, ainda fazendo strcat

--- a/Testes/Testes-Fase02/20.in
+++ b/Testes/Testes-Fase02/20.in
@@ -1,6 +1,9 @@
 function main{
 	var num:Int;
   var texto:String;
+  var textao:String;
+  
+ texto = texto + textao;
 
   num = readInt();
   texto = readString();
